--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WorkHub-UI",
+  "name": "workhub-ui",
   "version": "1.0.0",
   "description": "the WorkHub admin",
   "author": "协同设计团队<alwaysbegoing@163.com>",
@@ -66,7 +66,7 @@
     "function-bind": "1.1.0",
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.8.2",
     "opn": "4.0.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
     "ora": "1.1.0",
