--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "simplemde": "1.11.2",
     "sortablejs": "1.5.1",
     "vue": "2.4.2",
+    "vue-avatar": "^2.1.3",
     "vue-awesome": "^2.3.5",
     "vue-count-to": "1.0.5",
     "vue-multiselect": "2.0.0-beta.15",
