--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "axios": "0.16.2",
     "codemirror": "5.26.0",
     "dropzone": "5.1.0",
-    "echarts": "3.6.2",
+    "echarts": "^3.6.2",
     "element-ui": "1.4.1",
     "file-saver": "1.3.3",
     "jquery": "3.1.1",
@@ -30,6 +30,7 @@
     "showdown": "1.7.1",
     "simplemde": "1.11.2",
     "sortablejs": "1.5.1",
+    "v-charts": "^1.16.19",
     "vue": "2.4.2",
     "vue-avatar": "^2.1.3",
     "vue-awesome": "^2.3.5",
