--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@handsontable/vue": "^2.0.0-beta1",
     "axios": "0.16.2",
     "codemirror": "5.26.0",
     "dropzone": "5.1.0",
-    "echarts": "^3.6.2",
+    "echarts": "^3.8.5",
     "element-ui": "1.4.1",
     "file-saver": "1.3.3",
+    "handsontable": "^4.0.0",
     "jquery": "3.1.1",
     "js-cookie": "2.1.4",
     "jsonlint": "1.6.2",
