--- a/package.json
+++ b/package.json
@@ -69,8 +69,10 @@
     "file-loader": "0.11.2",
     "friendly-errors-webpack-plugin": "1.6.1",
     "function-bind": "1.1.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "2.28.0",
     "http-proxy-middleware": "0.17.4",
+    "markdown-loader": "^3.0.0",
     "node-sass": "^4.8.2",
     "opn": "4.0.2",
     "optimize-css-assets-webpack-plugin": "1.3.0",
