--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
+
+src/views/backup
+src/mock
+
 .DS_Store
 node_modules/
 dist/
-static/ckeditor
-gifs/
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+**/*.log
+
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
+
+# Editor directories and files
 .idea
 .vscode
-npm-debug.log.3365733778
-src/views/backup
-src/mock
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+package-lock.json
