--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "echarts": "^3.8.5",
     "element-ui": "1.4.1",
     "file-saver": "1.3.3",
+    "gitgraph.js": "^1.13.0",
     "handsontable": "^4.0.0",
     "jquery": "3.1.1",
     "js-cookie": "2.1.4",
